# revenue-squad

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  squad.toml.example  supabase_schema.sql
.github/workflows/: ci.yml
docs/: build-plan.md  v2-plan.md
examples/demo-run/: README.md  discovery-notes-elder-law-firm-a.md  pipeline.csv  research-elder-law-2026-07-09.md
examples/demo-run/outreach/: elder-law-firm-a.md  elder-law-firm-b.md
examples/demo-run/proposals/: elder-law-firm-a.md
skills/outreach/: SKILL.md
skills/proposal/: SKILL.md
skills/research/: SKILL.md
src/revenue_squad/: __init__.py  backend.py  blocklist.py  cli.py  crm.py  gmail.py  notion.py  pipeline.py  places.py  runner.py  supabase.py  verify.py
tests/: conftest.py  test_backend.py  test_blocklist.py  test_chunking.py  test_cli.py  test_crm.py  test_daily.py  test_followups.py  test_gmail.py  test_mark_sent.py  test_notion.py  test_packaging.py  test_pipeline.py  test_places.py  test_runner.py  test_supabase.py  test_verify.py
