[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revenue-squad"
version = "0.1.0"
description = "Solo-operator outbound B2B workflow (research -> outreach -> proposal) driven by the Claude CLI, with a verified-emails-only local CSV pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "naidx0" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "dnspython>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3",
]

[project.scripts]
squad = "revenue_squad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/revenue_squad"]

# The repo-root skills/ dir is a product feature (readable, drop-in Claude Code
# skills), so it stays at the root — but it must also ride inside the wheel, or a
# pip/uv-tool install has no skills to load. Ship a copy at revenue_squad/skills.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "revenue_squad/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests that build artifacts or are otherwise slow (deselect with '-m \"not slow\"')",
]
